# Doggoscript

./: .gitignore  .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  basic.py  config.json  doggoscript.py  grammar.txt  pyproject.toml  readme.md  setup.py  workspace.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
doggoscript/: __init__.py  error.py  interpreter.py  lexer.py  nodes.py  parser.py  token.py  values.py
ide/: index.html  main.js  package-lock.json  package.json
ide/lib/: doggoscript.js  simple.js  style.css
ide/run/: run_script.bat
package/: nom.py
